[gd_scene load_steps=6 format=2]

[ext_resource path="res://Environment/Streets/Buildings/GenericBrick/GenericBrickBuilding.gd" type="Script" id=1]
[ext_resource path="res://Engine/SpatialNodeArea/SpatialNodeArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://Environment/Streets/Buildings/GenericBrick/BrickWall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/SpatialNodeLength/SpatialNodeLength.tscn" type="PackedScene" id=4]
[ext_resource path="res://Environment/Streets/Buildings/GenericBrick/BrickWall_Corner.tscn" type="PackedScene" id=5]

[node name="GenericBrickBuilding" type="Spatial"]
script = ExtResource( 1 )

[node name="WallS" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 9 )
length1 = 8.0
length2 = 10.0
direction2 = Vector3( 0, 1, 0 )
unit = ExtResource( 3 )

[node name="WallE" parent="." instance=ExtResource( 2 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 9, 0, 8 )
length1 = 8.0
length2 = 10.0
direction2 = Vector3( 0, 1, 0 )
unit = ExtResource( 3 )

[node name="WallN" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 8, 0, 0 )
length1 = 8.0
length2 = 10.0
direction2 = Vector3( 0, 1, 0 )
unit = ExtResource( 3 )

[node name="WallW" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.19249e-008, 0, -1, 0, 1, 0, 1, 0, 1.19249e-008, 0, 0, 1 )
length1 = 8.0
length2 = 10.0
direction2 = Vector3( 0, 1, 0 )
unit = ExtResource( 3 )

[node name="CornerSW" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9 )
length = 10.0
direction = Vector3( 0, 1, 0 )
unit = ExtResource( 5 )

[node name="CornerSE" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-008, 0, 1, 0, 1, 0, -1, 0, -4.37114e-008, 9, 0, 9 )
length = 10.0
direction = Vector3( 0, 1, 0 )
unit = ExtResource( 5 )

[node name="CornerNE" parent="." instance=ExtResource( 4 )]
transform = Transform( -1, 0, -8.74228e-008, 0, 1, 0, 8.74228e-008, 0, -1, 9, 0, 0 )
length = 10.0
direction = Vector3( 0, 1, 0 )
unit = ExtResource( 5 )

[node name="CornerNW" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.19249e-008, 0, -1, 0, 1, 0, 1, 0, 1.19249e-008, 0, 0, 0 )
length = 10.0
direction = Vector3( 0, 1, 0 )
unit = ExtResource( 5 )

